k8s/network/infra/ingress-nginx/ingress-home.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: homarr-ingress
  namespace: home
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - home.frittylab.xyz
        - homarr.frittylab.xyz
      secretName: frittylab-tls
  rules:
    - host: home.frittylab.xyz
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: homarr-service
                port:
                  number: 80
    - host: homarr.frittylab.xyz
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: homarr-service
                port:
                  number: 80
