k8s/network/infra/ingress-nginx/ingress-jellystack.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jellystack-ingress
  namespace: jellystack
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  ingressClassName: nginx  # Adjust this if your Ingress class name is different
  tls:
    - hosts:
        - jellyfin.frittylab.xyz
        - jellyseerr.frittylab.xyz
        - sonarr.frittylab.xyz
        - radarr.frittylab.xyz
        - jackett.frittylab.xyz
        - transmission.frittylab.xyz
        - bazarr.frittylab.xyz
        - qbittorrent.frittylab.xyz
        - torrent.frittylab.xyz
        - prowlarr.frittylab.xyz
      secretName: frittylab-tls
  rules:
    - host: jellyfin.frittylab.xyz
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: jellyfin
                port:
                  number: 80
    - host: jellyseerr.frittylab.xyz
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: jellyseerr
                port:
                  number: 80
    - host: sonarr.frittylab.xyz
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: sonarr
                port:
                  number: 80
    - host: radarr.frittylab.xyz
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: radarr
                port:
                  number: 80
    - host: jackett.frittylab.xyz
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: jackett
                port:
                  number: 80
    - host: transmission.frittylab.xyz
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: transmission
                port:
                  number: 80
    - host: bazarr.frittylab.xyz
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: bazarr
                port:
                  number: 80
    - host: qbittorrent.frittylab.xyz
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: qbittorrent
                port:
                  number: 80
    - host: torrent.frittylab.xyz
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: qbittorrent
                port:
                  number: 80
    - host: prowlarr.frittylab.xyz
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: prowlarr
                port:
                  number: 80
