k8s/network/infra/ingress-nginx/ingress-nextcloud.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nextcloud-ingress
  namespace: nextcloud
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: "10G"
spec:
  ingressClassName: nginx  # Adjust this if your Ingress class name is different
  tls:
    - hosts:
        - nextcloud.frittylab.xyz
        - cloud.frittylab.xyz
      secretName: frittylab-tls
  rules:
    - host: nextcloud.frittylab.xyz
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nextcloud-service
                port:
                  number: 80
    - host: cloud.frittylab.xyz
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nextcloud-service
                port:
                  number: 80
